@@ -1,18 +1,0 @@
-//------------------------------------------------------------------------------
-// hlaFormFunc() -- parser form function for HLA networks
-//------------------------------------------------------------------------------
-#ifndef __oe_hla_FormFunc_H__
-#define __oe_hla_FormFunc_H__
-
-namespace oe {
-
-namespace base { class Object; }
-
-namespace hla {
-
-extern base::Object* hlaFormFunc(const char* const formname);
-
-}
-}
-
-#endif
