@@ -1,0 +1,19 @@
+
+#ifndef __oe_hla_rprfom_factory_H__
+#define __oe_hla_rprfom_factory_H__
+
+namespace oe {
+
+namespace base { class Object; }
+
+namespace hla {
+namespace rprfom {
+
+base::Object* factory(const char* const name);
+
+}
+}
+}
+
+#endif
+
