@@ -1,21 +1,0 @@
-//------------------------------------------------------------------------------
-// rprFormFunc() -- parser form function for HLA RPR FOM
-//------------------------------------------------------------------------------
-#ifndef __oe_hla_rprfom_FormFunc_H__
-#define __oe_hla_rprfom_FormFunc_H__
-
-namespace oe {
-
-namespace base { class Object; }
-
-namespace hla {
-
-namespace rprfom {
-
-extern base::Object* formFunc(const char* const formname);
-
-}
-}
-}
-
-#endif
